[package]
name = "pyrsia_build"
version = "0.1.0"
description = "Pyrsia Build Pipeline"
authors = ["pyrsiaoss <pyrsiaopensource@gmail.com>"]
edition = "2021"
license = "Apache-2"

[dependencies]
actix-web = "4.1.0"
async-std = { version = "1.12.0", features = [ "unstable" ] }
clap = { version = "3.2.8", features= [ "cargo", "derive" ] }
hex = "0.4.3"
multihash = "0.16.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.81"
strum_macros = "0.24.2"
tokio = { version = "1.19.2", features = [ "macros", "rt-multi-thread" ] }
uuid = { version = "1.1.2", features = [ "v4" ] }

[[bin]]
name = "pyrsia_build"
path = "src/main.rs"
